# self-cultivation-writter

./: .env.example  .gitignore  README.md  pyproject.toml
.claude/rules/: project-structure.md
app/core/: config.py
app/llm/: client.py
app/models/: db.py
app/orchestrator/: pipeline.py
app/profiles/: seed.py
n8n/: README.md
tests/: test_imports.py  test_llm_params.py
ui/: app.py
