[project]
name = "self-cultivation-writter"
version = "0.0.1"
description = "AI agents that write Chinese cultivation (xianxia/tu-tien) novels in Vietnamese."
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.55",
    "sqlmodel>=0.0.22",
    "streamlit>=1.40",
    "pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
